# multi_agent_planning

./: .gitignore  CMakeLists.txt  README.md
include/: Domain.h  InteractionCostCalculator.h  MultiAgentPlanner.h  PlanningAgent.h  PlanningAgent.txt  Scenario.h  Solver.h  plan_utils.h
results/1/: Increasing_dependency_best_alternative_wins  Increasing_dependency_oscillates  best_alternative_local_minimum  best_alternative_wins  best_alternative_wins_complex
results/2/: parameters
results/2/graphs/: graph_1.dot
results/2/grouping_is_bad/: output
results/2/increasing_dependency_outperforms_NOT_ANALYZED/: output
results/buggy/1/: a_more_complex_case  increasing_dependency_oscillates
results/buggy/2/: best_alternative_local_minimum
scripts/: aggregate_results.py  csv_reader.py  run_experiment_agents.py  run_experiment_theta.py
src/: Domain.cpp  InteractionCostCalculator.cpp  MultiAgentPlanner.cpp  PlanningAgent.cpp  Scenario.cpp  Solver.cpp  experiment_agents.cpp  experiment_theta.cpp  experiments.cpp  idp_tester.cpp  iidp_tester.cpp  main.cpp  plan_utils.cpp
